melhorias de design

--- a/generators/app/templates/ui5/index.html
+++ b/generators/app/templates/ui5/index.html
@@ -38,6 +38,14 @@
 	<link rel="stylesheet" type="text/css" href="webapp/css/style.css" />
 	<link rel="stylesheet" type="text/css" href="webapp/css/animate.css" />
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />	
+	<link rel="manifest" href="webapp/manifest.json">
+	<script>
+		/* if ('serviceWorker' in navigator) {
+		  navigator.serviceWorker.register('service-worker-v1.js')
+			.then(() => console.log('service worker installed'))
+			.catch(err => console.error('Error', err));
+		} */
+	  </script>
 </head>
 <body class="sapUiBody" id="content"></body>    
 </html>
