--- a/generators/app/templates/ui5/webapp/css/style.css
+++ b/generators/app/templates/ui5/webapp/css/style.css
@@ -5,6 +5,12 @@
 .sapUiFormTitleH6 {
 	height: 0px !important;
 }
+.<%= appName %>Positive {
+	color: #00b894 !important;
+}
+.<%= appName %>Negative {
+	color: #d63031 !important;
+}
 
 .tableRanges {
 	background-color: #607D8B;
@@ -29,11 +35,11 @@
 	width: 100%;
 	height: inherit;
 	overflow: hidden;
-	-webkit-filter: blur(3px);
-	-moz-filter: blur(3px);
-	-o-filter: blur(3px);
-	-ms-filter: blur(3px);
-	filter: blur(3px);
+	-webkit-filter: blur(2px);
+	-moz-filter: blur(2px);
+	-o-filter: blur(2px);
+	-ms-filter: blur(2px);
+	filter: blur(2px);
 }
 .bg-master-page {
 	background: linear-gradient(to bottom,#2a4863,#9dc0de)!important;
@@ -48,16 +54,3 @@ span {
 	outline: none !important;
 }
 
-.sectionFill {
-	min-height:  460px;
-}
-
-.custom-control-center-cost-round{
-	padding: 1px 2px 1px 1px;
-	background: #227093;
-	border-radius: 3px;	
-	display: inline;	
-	line-height: 1.5em;
-	margin-right: 2px;
-	color: #FFF;
-}
