--- a/generators/app/templates/ui5/index.html
+++ b/generators/app/templates/ui5/index.html
@@ -41,8 +41,8 @@
 	<link rel="manifest" href="webapp/manifest.json">
 	<script>
 		/* if ('serviceWorker' in navigator) {
-		  navigator.serviceWorker.register('service-worker-v1.js')
-			.then(() => console.log('service worker installed'))
+		  navigator.serviceWorker.register('sw.js')
+			.then(() => console.log('service worker instalado'))
 			.catch(err => console.error('Error', err));
 		} */
 	  </script>
