Alteração no template, API fech, RestModel

--- a/generators/app/templates/ui5/webapp/css/style.css
+++ b/generators/app/templates/ui5/webapp/css/style.css
@@ -1,28 +1,9 @@
-.sapSuiteUiCommonsTimeline{
-	max-width: none !important;
-}
 
-.sapUiFormTitleH6 {
-	height: 0px !important;
-}
 .<%= appName %>Positive {
 	color: #00b894 !important;
 }
 .<%= appName %>Negative {
 	color: #d63031 !important;
-}
-
-.tableRanges {
-	background-color: #607D8B;
-	border: #607D8B 1px solid;
-}
-.tableLevels {
-	background-color:  #90A4AE;
-	border: #90A4AE 1px solid;
-}
-.tableApprovers {
-	background-color:  #B0BEC5;
-	border: #B0BEC5 1px solid;
 }
 
 .loginBG:before {
@@ -41,16 +22,9 @@
 	-ms-filter: blur(2px);
 	filter: blur(2px);
 }
-.bg-master-page {
-	background: linear-gradient(to bottom,#2a4863,#9dc0de)!important;
-}
-div {
-	outline: none !important;
-}
-section {
-	outline: none !important;
-}
-span {
-	outline: none !important;
-}
 
+.img-logo-topo{
+	filter: invert(99%);
+	filter: brightness(3.5);
+	max-height: 1.5em;
+}
