--- a/generators/app/templates/ui5/webapp/view/App.view.xml
+++ b/generators/app/templates/ui5/webapp/view/App.view.xml
@@ -5,31 +5,71 @@
 	xmlns:core="sap.ui.core"
 	xmlns:tnt="sap.tnt"
 	height="90%">
+		<tnt:ToolPage id="tooApplPage" sideExpanded="false">
+	<tnt:header>
 	<tnt:ToolHeader>
-		<Button  icon="sap-icon://home" type="Transparent"  press="onHome" >
+		<Button id="sideNavigationToggleButton"   enabled="false"   icon="sap-icon://menu2" type="Transparent"  press="onSideNavButtonPress" >
 			<layoutData>
 				<OverflowToolbarLayoutData priority="NeverOverflow" />
 			</layoutData>
 		</Button>
-		<ToolbarSpacer />		
-		
+			
+		<Image
+			class="img-logo-topo"
+			src="webapp/img/logo.png"
+			densityAware="false">			
+		</Image>
 		<Text text="{i18n>App.Name}" wrapping="false">
 			<layoutData>
 				<OverflowToolbarLayoutData priority="Disappear" />
 			</layoutData>
 		</Text>
 		<ToolbarSpacer />
-		<Button id="userLoggedPopOver"    text="{currentUser>/U_NAME}" type="Transparent"  icon="sap-icon://person-placeholder"  press="onLoginPopOver">
-			<layoutData>
-				<OverflowToolbarLayoutData priority="NeverOverflow" />
-			</layoutData>
-		</Button>
-		<Button id="userNotifications"  type="Transparent"  icon="sap-icon://ui-notifications"  press="onUserNotifications">
+		<Button id="userLoggedPopOver"    text="{currentUser>/UserName}" type="Transparent"  icon="sap-icon://person-placeholder"  press="onLoginPopOver">
 			<layoutData>
 				<OverflowToolbarLayoutData priority="NeverOverflow" />
 			</layoutData>
 		</Button>
 			
 	</tnt:ToolHeader>
-	<App id="app" />
+	</tnt:header>
+	<tnt:sideContent>
+			<tnt:SideNavigation expanded="false"								
+								itemSelect="onNavRoute">
+				<tnt:NavigationList id="navList" items="{path: '/navigation', templateShareable:false}">
+					<tnt:NavigationListItem text="{title}"
+											icon="{icon}"
+											enabled="{enabled}"
+											expanded="{expanded}"
+											items="{path: 'items', templateShareable:false}"
+											key="{key}">
+						<tnt:NavigationListItem text="{title}"
+												key="{key}"
+												enabled="{enabled}">
+						</tnt:NavigationListItem>
+					</tnt:NavigationListItem>
+				</tnt:NavigationList>
+				<tnt:fixedItem>
+					<tnt:NavigationList items="{path: '/fixedNavigation', templateShareable:false}">
+						<tnt:NavigationListItem text="{title}"
+												icon="{icon}"
+												key="{key}">
+						</tnt:NavigationListItem>
+					</tnt:NavigationList>
+				</tnt:fixedItem>
+			</tnt:SideNavigation>
+		</tnt:sideContent>
+		<tnt:mainContents>
+			<NavContainer id="pageContainer">
+				<pages>
+					<ScrollContainer id="root1"
+									 horizontal="false"
+									 vertical="true"
+									 height="100%">
+									 <App id="app" />						
+					</ScrollContainer>					
+				</pages>
+			</NavContainer>
+		</tnt:mainContents>
+	</tnt:ToolPage>
 </mvc:View> 
