--- a/generators/app/templates/ui5/webapp/view/DashBoard.view.xml
+++ b/generators/app/templates/ui5/webapp/view/DashBoard.view.xml
@@ -1,61 +1,50 @@
 <core:View 
-	xmlns:core="sap.ui.core"
-	xmlns="sap.uxap"
+	xmlns:core="sap.ui.core"	
 	xmlns:l="sap.ui.layout"
-	xmlns:m="sap.m"		
-	height="100%"
+	xmlns="sap.m"		
+	height="100%"	
+	xmlns:tnt="sap.tnt"
+	xmlns:sing="<%= appName %>.controls.signature"
+	xmlns:custom="<%= appName %>.controls"
+	xmlns:quillEditor="<%= appName %>.controls.quill"
 	xmlns:app="http://schemas.sap.com/sapui5/extension/sap.ui.core.CustomData/1"
 	controllerName="<%= appName %>.controller.DashBoard">
-
- 	<ObjectPageLayout
-	 subSectionLayout="titleOnTop"
-	 id="idApprovalsRequestPurchase"  
-	 class="sapThemePageBG-asColor"	 
-	 enableLazyLoading="false">	 
-	 <headerTitle>
-			<ObjectPageHeader objectImageURI=''
-							  id="idApprovalsRequestPurchaseHeader"
-							  objectTitle="{path:'currentUser>/U_NAME', formatter:'.fmt.formatCaptalize'}"
-							  objectImageShape="Circle"
-							  objectImageAlt="{currentUser>/U_NAME}"
-							  objectSubtitle="{currentUser>/DepartmentName}"
-							  isObjectIconAlwaysVisible="false"
-							  isObjectTitleAlwaysVisible="true"
-							  isObjectSubtitleAlwaysVisible="true">
-				<actions>
-					<ObjectPageHeaderActionButton   id="userLoggedPopOver" icon="sap-icon://customize"  press="userSettingPress"  text="{i18n>Commom.Settings}" tooltip="{i18n>Commom.Settings}" />										
-				</actions>
-			</ObjectPageHeader>
-		</headerTitle>	 
-		<sections >
-			<ObjectPageSection title="{i18n>Commom.Home}">
-				<ObjectPageSubSection  >
-					<blocks>
-						<l:HorizontalLayout 
-							allowWrapping="true" 
-							id="containerTile" 
-							content="{/}">
-							<m:GenericTile 
-							header="{title}" 
-							subheader="{info}"
-							app:route="{route}"
-							state="Loaded" 							
-							press="onNavRoute" class="sapUiTinyMargin">
-								<m:TileContent 
-									unit="{numberUnit}" 
-									footer="{footer}">
-									<m:NumericContent 
-									icon="{icon}" 
-									value="{number}" 
-									valueColor="{color}" 
-									indicator="{trend}" 
-									scale="{scale}" />
-								</m:TileContent>
-							</m:GenericTile>
-						</l:HorizontalLayout>
-					</blocks>
-				</ObjectPageSubSection>				
-			</ObjectPageSection>
-		</sections>
-	</ObjectPageLayout>	 
+	
+	<Page title="{i18n>App.DasboardTitle}" >
+		<content>
+			<VBox class="sapUiTinyMargin">	
+				<Button  width="100%"  text="Clique aqui para ver um emxemplo da tela de erros" type="Emphasized" press="onFakeEx"></Button>
+			</VBox>	
+			<List				
+				id="fipeList"
+				items="{fipe>/}"
+				includeItemInSelection="true">
+				<headerToolbar>
+					<Toolbar>
+						<Title  text="{selectedCompany>/fipe_name}" level="H2" />
+						<tnt:InfoLabel id="il1" text="{fipe>/length}" renderMode="Narrow" colorScheme="1" displayOnly= "true"/>
+						<SearchField  search="filterCars"   width="30%" />
+						<ToolbarSpacer />
+						<Select
+							id="selectMarca"
+							change="updateVeicleSelected" 
+							forceSelection="true" 
+							selectedKey="6" 
+							items="{
+								path: 'marcas>/'								
+							}">
+							<core:ListItem key="{marcas>id}" text="{marcas>name}" icon="sap-icon://building"/>
+						</Select>						
+					</Toolbar>
+				</headerToolbar>
+				<StandardListItem
+					icon="sap-icon://car-rental" 
+					infoState="Success"
+					type="Navigation" 
+					title="{fipe>fipe_name}"
+					info="{fipe>fipe_marca}"
+					press="loadCarModels"/>
+			</List>
+		</content>
+	</Page> 	
 </core:View>
