--- a/generators/app/templates/app/index.html
+++ b/generators/app/templates/app/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title><%= appName %></title>
   <script id="sap-ui-bootstrap" src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
-    data-sap-ui-libs="sap.m, sap.ui.layout, sap.uxap,sap.tnt,sap.suite.ui.commons" data-sap-ui-theme="sap_belize_plus"
+    data-sap-ui-libs="sap.m, sap.ui.layout, sap.uxap, sap.tnt" data-sap-ui-theme="sap_belize_plus"
     data-sap-ui-compatVersion="edge" data-sap-ui-xx-bindingSyntax="complex" data-sap-ui-preload="async"
     data-sap-ui-resourceroots='{"<%= appName %>": "./webapp"}'>
   </script>
@@ -20,13 +20,13 @@
         sap.ui.component({
           async: true,
           name: "<%= appName %>"
-        }).then(function (oComp) {
-          new Shell({
-            app: new ComponentContainer({
+        })
+        .then(function (oComp) {
+           new ComponentContainer({
               height: "100%",
               component: oComp
             })
-          }).placeAt("content");
+          .placeAt("content");
         });
       });
     });
