--- a/generators/app/templates/app/webapp/css/style.css
+++ b/generators/app/templates/app/webapp/css/style.css
@@ -1,26 +1,17 @@
 
-.loginBG:before {
-	content: "";
-	position: inherit;
-	z-index: -1;
-	display: block;
-	background: url("../img/bg.jpg") no-repeat center center fixed;
-	background-size: cover;
-	width: 100%;
-	height: inherit;
-	overflow: hidden;
-	-webkit-filter: blur(2px);
-	-moz-filter: blur(2px);
-	-o-filter: blur(2px);
-	-ms-filter: blur(2px);
-	filter: blur(2px);
+.round{
+	border-radius: 3px;
 }
 .primary{
 	background: rgba(23, 0, 128,0.5) !important;
 	
 }
+
 .card-shodow{
 	box-shadow: 0 0 2px 0.1px #000 !important;
+}
+.shodow{
+	box-shadow: 0 2px 6px 0.1px #636363 !important;
 }
 [data-theme="sap_belize_hcb"]{
 	background: #000 !important;
